--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  padding: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 400px;
+  height: 100%;
+  position: relative;
+}
+
+.block {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #888;
+}
+
+.button {
+  width: 200px;
+  font-size: 32px;
+  line-height: 32px;
+  font-weight: 600;
+  color: white;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #888;
+}
+
+.button:disabled {
+  background: #575757;
+}
+
+.block--animated {
+  animation: blockAnimation 5s infinite linear;
+}
+
+.block span {
+  font-size: 32px;
+  line-height: 32px;
+  font-weight: 600;
+  color: white;
+}
+
+.ball {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: blue;
+  position: absolute;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.1s ease-in-out;
+}
+
+.ball--visible {
+  opacity: 1;
+  transition: opacity 0.1s ease-in-out;
+}
+
+@keyframes blockAnimation {
+  0%, 50%, 100% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(-100%);
+  }
+  75% {
+    transform: translateY(100%);
+  }
 }
