--- a/src/index.css
+++ b/src/index.css
@@ -55,13 +55,8 @@ body {
   border-radius: 50%;
   background-color: blue;
   position: absolute;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
   opacity: 0;
-  transition: opacity 0.1s ease-in-out;
-}
-
-.ball--visible {
-  opacity: 1;
   transition: opacity 0.1s ease-in-out;
 }
 
